# Attendance-Management-System-OASUFR--repo2

./: .gitignore  Procfile  README.md  manage.py  oasufr_backup.sql  pyproject.toml  requirements.txt
OASUFR/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
app/: admin.py  apps.py  decorators.py  forms.py  models.py  redis.py  tasks.py  utils.py  views.py
app/migrations/: 0001_initial.py  0002_alter_attendance_id.py  0003_alter_attendance_id.py
app/templates/app/: attendance.html  dashboard.html  login.html  logs.html  stripe.html
static/css/: styles-login.css  styles-main.css  styles.css
templates/: footer.html  main.html  navbar.html
