[tool.poetry]
name = "oasufr"
version = "0.1.0"
description = "A Django project with Celery and other dependencies"
authors = ["Ali Arayz arayzwasti111@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.1.4"
celery = "5.4.0"
amqp = "5.3.1"
asgiref = "3.8.1"
billiard = "4.2.1"
certifi = "2024.12.14"
charset-normalizer = "3.4.0"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
cron-descriptor = "1.4.5"
dj-database-url = "2.3.0"
django-celery-beat = "2.7.0"
django-celery-results = "2.5.1"
django-environ = "0.11.2"
django-extensions = "3.2.3"
django-heroku = "0.3.1"
django-jazzmin = "3.0.1"
django-redis = "5.4.0"
django-timezone-field = "7.0"
dnspython = "2.7.0"
eventlet = "0.38.2"
greenlet = "3.1.1"
gunicorn = "23.0.0"
idna = "3.10"
kombu = "5.4.2"
packaging = "24.2"
prompt_toolkit = "3.0.48"
psycopg2 = "2.9.10"
python-crontab = "3.2.0"
python-dateutil = "2.9.0.post0"
redis = "5.2.1"
requests = "2.32.3"
six = "1.17.0"
sqlparse = "0.5.3"
stripe = "11.4.1"
typing_extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.3.0"
vine = "5.1.0"
wcwidth = "0.2.13"
whitenoise = "6.8.2"

[tool.poetry.dev-dependencies]
# Add any development dependencies here, e.g., for testing or linting
pytest = "^6.2"
black = "^22.0"
